# pretix-paybox

./: .gitignore  .update-locales.sh  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  Tiltfile  backup-db.sh  kaniko-build.sh  pretixplugin.toml  pyproject.toml  setup.cfg  setup.py  static-init.sh
.github/workflows/: python-publish.yml  style.yml  tests.yml
helm/pretix/: Chart.yaml  values.yaml
helm/pretix/templates/: NOTES.txt  _helpers.tpl  deployment-postgres.yaml  deployment-pretix.yaml  deployment-redis.yaml  deployment-smtpd.yaml  ingress-pretix.yaml  pvc-postgres.yaml  pvc-pretix.yaml  secret-postgres.yaml  secret-pretix.yaml  service-pretix.yaml  service-redis.yaml
helm/pretix/templates/tests/: test-connection.yaml
pretix_paybox/: Paybox.py  PayboxCheck.py  apps.py  payment.py  signals.py  urls.py  views.py
pretix_paybox/locale/: django.pot
pretix_paybox/locale/de/LC_MESSAGES/: django.po
pretix_paybox/locale/de_Informal/LC_MESSAGES/: django.po
pretix_paybox/locale/es/LC_MESSAGES/: django.po
pretix_paybox/locale/fr/LC_MESSAGES/: django.po
pretix_paybox/templates/pretix_paybox/: checkout_payment_form.html  control.html  pending.html  prepare.html  redirect.html
pretix_paybox/templates/pretix_paybox/email/: order_pending.txt
